--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -8,5 +8,7 @@ img {
 }
 
 canvas {
-    background-color: #aaffaa;
+    background-image: url(images/background.jpg);
+    background-size: cover;
+    background-repeat: repeat;
 }
